# libs3

./: CMakeLists.txt  GNUmakefile  GNUmakefile.mingw  GNUmakefile.osx
inc/: libs3.h
src/: CMakeLists.txt  bucket.c  bucket_metadata.c  general.c  object.c  request.c  s3.c
